--- a/TempSBGP/jpa/src/main/resources/application.properties
+++ b/TempSBGP/jpa/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=Food
 server.port=8080
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/order_db
+spring.datasource.url=jdbc:mysql://localhost:3306/FOODORDER
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=Samirdas123
 #
 #
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
