--- a/TempSBGP/jpa/src/main/resources/application.properties
+++ b/TempSBGP/jpa/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/FOODORDER
 spring.datasource.username=root
-spring.datasource.password=Samirdas123
+spring.datasource.password=
 #
 #
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -16,3 +16,6 @@ spring.jpa.show-sql=true
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+# Razorpay dummy key
+razorpay.key.id=rzp_test_1DP5mmOlF5G5ag
